# geneva-examples

./: .gitignore  .pre-commit-config.yaml  .rayignore  AUTHORING.md  CLI_ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  config-example-enterprise.yaml  config-example-local.yaml  config-example.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
demo_data/: debug_healthy_run.jsonl  debug_stuck_workers.jsonl
docs/: chunker_fault_tolerance.tex
fault_harness/: README.md  build_full_report.py  build_report.py  recovery.py  run.py  s3_fault_proxy.py
geneva_examples/apps/: __init__.py  udf_studio.py
geneva_examples/apps/studio/: __init__.py  library.py  runner.py  samples.py  templates.py
geneva_examples/core/: __init__.py  _types.py  backfill.py  common.py  config.py  diagnose.py  package_specs.py  spec.py  tables.py
geneva_examples/core/utils/: __init__.py  hf_streaming.py  images.py  pdfs.py  retry.py  tables.py  videos.py
geneva_examples/examples/: __init__.py  cli.py
geneva_examples/examples/_shared/: __init__.py  clip.py
geneva_examples/examples/audio/: __init__.py  export.py  ingest.py  synthesize.py  transcribe.py  tts.py
geneva_examples/examples/debugging/: __init__.py  faulty.py  seed_errors.py
geneva_examples/examples/images/: __init__.py  caption.py  embed.py  imageinfo.py  ingest.py  lightweight.py
geneva_examples/examples/pdf/: __init__.py  chunk.py  ingest.py
geneva_examples/examples/video/: __init__.py  chunk.py  chunk_external_video.py  chunk_faults.py  chunk_openvid.py  chunkers.py  chunkers_uri.py  frame_caption.py  frame_embed.py  frame_openpose.py  ingest.py  ingest_external_refs.py  ingest_openvid.py  seed.py
geneva_examples/ops/: __init__.py  cleanup.py  debug.py  jobs.py  stats.py  tables.py
geneva_examples/pipeline/: __init__.py  chunk_videos.py  chunk_videos_openvid.py  cleanup.py  ingest_hf_streaming.py  ingest_images.py  ingest_pdfs.py  ingest_videos.py  ingest_videos_openvid.py  seed_video_clips.py
geneva_examples/pipeline/stages/: __init__.py  _runner.py  captions.py  embeddings.py  frame_caption.py  frame_embed.py  frame_openpose.py  lightweight.py  pdf_chunks.py
geneva_examples/tui/: __init__.py  app.py  debug_monitor.py  forms.py
geneva_examples/udfs/: __init__.py  blip.py  chunkers.py  clip.py  imageinfo.py  openpose.py  pdf.py
reports/: README.md  _report_common.py  build_report.py  build_report_geneva_fix.py  build_report_media_vs_text.py
studio_data/: README.md  input.csv
tests/: _fakes.py  conftest.py  test_audio.py  test_config.py  test_core.py  test_core_diagnose.py  test_core_io.py  test_core_tables.py  test_hf_streaming.py  test_ops_debug.py  test_ops_jobs.py  test_ops_smoke.py  test_ops_stats.py  test_ops_tables.py  test_package_specs.py  test_pipeline_chunk_smoke.py  test_pipeline_ingest_smoke.py  test_pipeline_runner.py  test_pipeline_seed.py  test_pipeline_smoke.py  test_registry.py  test_spec.py  test_studio_app.py  test_studio_library.py  test_studio_runner.py  test_studio_samples.py  test_studio_templates.py  test_tui.py  test_tui_forms.py  test_udfs.py  test_video_external.py
