[project]
name = "geneva-examples"
version = "0.1.0"
description = "Example Geneva UDFs and submission tooling: load images/videos into LanceDB Enterprise, then backfill lightweight features, OpenCLIP embeddings, BLIP captions, and OpenPose skeletons via remote Geneva UDFs."
requires-python = ">=3.12,<3.13"
dependencies = [
    "typer>=0.27.0",
    "pyyaml>=6.0",
    # Pin the LanceDB stack to the versions the deployed cluster was built
    # against (client/server must match or declare_table/backfill_column 500s).
    # pylance 9.x betas live on the lance-format index (see [tool.uv.sources]).
    # pyarrow/numpy are left to geneva's own constraints. geneva 0.14.0 (final,
    # from public PyPI) requires python <3.14 — hence the requires-python upper
    # bound above. Older pylance (8.x)/lancedb (0.33) spoke a different
    # namespace API, so add_columns would succeed but backfill_column returned
    # "column not found".
    "geneva==0.14.0",
    "lancedb==0.34.0b5",
    "pylance>=9.0.0b15",
    "pyarrow",
    "numpy",
    "pillow>=10",
    "torch>=2.13.0",
    "open-clip-torch>=2.24",
    "transformers>=5.14.1",
    "datasets>=3.0.0",
    # Explicit (already transitive via datasets): enables the `hf://datasets/...`
    # connect URI used by the OpenVid ingest CLI.
    "huggingface-hub>=1.24.0",
    # PyAV: video demux/transcode for chunk_videos.py and seed_video_clips.py.
    "av>=13",
    # PDF workflow: pypdf extracts page text, langchain-text-splitters chunks it.
    # These back geneva.udfs.document.{extract_pages,chunk_pages}, reused by the
    # chunk-pdfs stage and the UDF Studio pdf templates (local execution).
    "pypdf>=6.14.2,<7",
    "langchain-text-splitters>=1.1.2,<1.2",
    # UDF Studio: in-browser Gradio sandbox for prototyping UDFs/chunkers.
    # >=6: the UI is built and tested against the Gradio 6 API (4.x/5.x differ).
    "gradio>=6",
    "textual>=1.0.0",
    "controlnet-aux>=0.0.7",
]

[project.scripts]
# Per-step CLIs are generated from each example's spec (see geneva_examples/
# examples/cli.py) — one source of truth shared with the TUI. `uv run tui`
# launches the interactive runner.
tui = "geneva_examples.tui.app:main"
ingest-images = "geneva_examples.examples.cli:ingest_images"
ingest-videos = "geneva_examples.examples.cli:ingest_videos"
ingest-videos-openvid = "geneva_examples.examples.cli:ingest_videos_openvid"
ingest-videos-external = "geneva_examples.examples.cli:ingest_videos_external"
ingest-pdfs = "geneva_examples.examples.cli:ingest_pdfs"
chunk-videos = "geneva_examples.examples.cli:chunk_videos"
chunk-videos-openvid = "geneva_examples.examples.cli:chunk_videos_openvid"
chunk-videos-external = "geneva_examples.examples.cli:chunk_videos_external"
chunk-pdfs = "geneva_examples.examples.cli:chunk_pdfs"
ingest-audio = "geneva_examples.examples.cli:ingest_audio"
synthesize-audio = "geneva_examples.examples.cli:synthesize_audio"
transcribe-audio = "geneva_examples.examples.cli:transcribe_audio"
export-audio = "geneva_examples.examples.cli:export_audio"
seed-video-clips = "geneva_examples.examples.cli:seed_video_clips"
lightweight = "geneva_examples.examples.cli:lightweight"
embed = "geneva_examples.examples.cli:embed"
caption = "geneva_examples.examples.cli:caption"
frame-embed = "geneva_examples.examples.cli:frame_embed"
frame-caption = "geneva_examples.examples.cli:frame_caption"
frame-openpose = "geneva_examples.examples.cli:frame_openpose"
cleanup = "geneva_examples.ops.cleanup:app"
stats = "geneva_examples.ops.stats:app"
jobs = "geneva_examples.ops.jobs:app"
udf-studio = "geneva_examples.apps.udf_studio:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geneva_examples"]

# Geneva/LanceDB betas are published to Gemfury, not public PyPI. Allow
# prereleases so the unpinned lancedb/pylance resolve to their beta versions.
[tool.uv]
prerelease = "allow"

# Two Gemfury indexes, both `explicit` so only the packages pinned in
# [tool.uv.sources] resolve from them; everything else stays on PyPI:
#   - lancedb       → lancedb (beta). NOTE: geneva's *final* 0.14.0 ships on
#                     public PyPI, not Gemfury (only 0.14.0b0 lives here), so
#                     geneva is intentionally NOT pinned to this index.
#   - lance-format  → pylance (7.x+ betas live here, not on the lancedb repo)
[[tool.uv.index]]
name = "lancedb"
url = "https://pypi.fury.io/lancedb/"
explicit = true

[[tool.uv.index]]
name = "lance-format"
url = "https://pypi.fury.io/lance-format/"
explicit = true

[tool.uv.sources]
lancedb = { index = "lancedb" }
pylance = { index = "lance-format" }

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
    "ty>=0.0.50",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Sensible default set. The bandit (S) + blind-except (BLE) families are kept on
# because the code already carries targeted `# noqa: S.../BLE001` suppressions;
# RUF100 then flags any that become stale.
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "S", "BLE", "RUF"]
ignore = [
    "E501",   # line length: the formatter wraps code; long strings/URLs/comments are fine
    "B008",   # function call in default arg — this is exactly how Typer options are declared
    "S310",   # urlopen targets are hardcoded HF/Ray HTTP(S) endpoints, not user input
    "S108",   # "/tmp/..." paths are correct on the remote Ray workers, not the client
    "S110",   # try/except/pass: best-effort drop-if-exists / optional cleanup is idiomatic here
    "SIM105", # keep the explicit try/except/pass over contextlib.suppress (readability)
    "RUF001", # ambiguous-unicode in strings: ×, em dash, … are intentional typography
    "RUF002", # ditto, in docstrings
    "RUF003", # ditto, in comments
    "C408",   # dict(key=…) kwargs form is intentional/readable for DataLoader kwargs
]

[tool.ruff.lint.per-file-ignores]
# UDF Studio executes user-edited code in-process by design (it's a sandbox).
"geneva_examples/apps/studio/runner.py" = ["S102"]
# Tests: asserts are the point; temp paths and small fixtures are fine.
"tests/**" = ["S101", "S102", "S108"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-q",
    "--cov=geneva_examples",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=90",
]

[tool.coverage.run]
branch = true
source = ["geneva_examples"]
# Excluded from the line-coverage GATE because their bodies need a live
# Geneva/Ray cluster, GPUs, HTTP, or model weights. Their pure helpers ARE
# unit-tested (see tests/test_ops_*.py, test_udfs.py, test_pipeline_runner.py) —
# those tests run in CI and guard against regressions, they just don't inflate
# the coverage percentage with half-runnable files.
omit = [
    # Example step run() bodies open a cluster/Ray connection. The shared
    # backfill runner (core/backfill.py) and the spec/registry ARE fully tested.
    "geneva_examples/examples/*/ingest.py",
    "geneva_examples/examples/*/ingest_openvid.py",
    "geneva_examples/examples/*/ingest_external_refs.py",
    "geneva_examples/examples/*/chunk.py",
    "geneva_examples/examples/*/chunk_openvid.py",
    "geneva_examples/examples/*/chunk_external_video.py",
    "geneva_examples/examples/*/seed.py",
    "geneva_examples/examples/images/lightweight.py",
    "geneva_examples/examples/images/embed.py",
    "geneva_examples/examples/images/caption.py",
    "geneva_examples/examples/video/frame_embed.py",
    "geneva_examples/examples/video/frame_caption.py",
    "geneva_examples/examples/video/frame_openpose.py",
    # Audio round-trip: TTS/transcribe backfill bodies need Ray + model weights;
    # export opens a connection. Their factories/helpers ARE tested (test_audio.py).
    "geneva_examples/examples/audio/synthesize.py",
    "geneva_examples/examples/audio/transcribe.py",
    "geneva_examples/examples/audio/export.py",
    # Generated CLI bindings (thin build_command wrappers, exercised via smoke tests).
    "geneva_examples/examples/cli.py",
    # Ops CLIs: dominated by cluster/HTTP command bodies.
    "geneva_examples/ops/*",
    # The Textual TUI needs a live terminal app; its pure helpers are tested.
    "geneva_examples/tui/app.py",
    # Pure structural Protocols under TYPE_CHECKING: abstract `...` bodies that
    # never execute, so they only distort the line-coverage metric.
    "geneva_examples/core/_types.py",
    # Gradio UI wiring (event handlers need a browser runtime). The studio
    # submodule (runner/library/samples/templates) IS unit-tested -> kept in.
    "geneva_examples/apps/udf_studio.py",
    # Model UDFs need torch + weights at call time; only their manifests are tested.
    # imageinfo.py is pure and fully tested -> kept in.
    "geneva_examples/examples/_shared/clip.py",
    "geneva_examples/examples/_shared/blip.py",
    "geneva_examples/examples/audio/tts.py",
    "geneva_examples/examples/video/openpose.py",
    "geneva_examples/examples/video/chunkers.py",
    "geneva_examples/examples/video/chunkers_uri.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
